--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,18 +20,31 @@ dependencies:
   stacked_themes:
 
   #firebase
+  firebase_core_web:
   firebase_core:
   firebase_auth:
+  firebase_auth_web:
   cloud_firestore:
+  cloud_firestore_web:
   firebase_storage:
+  firebase_storage_web:
 
   image_picker:
   google_fonts:
+  shimmer:
+  cached_network_image:
+  url_launcher:
+  responsive_builder:
+  auto_size_text: ^3.0.0-nullsafety.0
+  line_icons:
+  animations:
+  animated_text_kit:
   #date
   flutter_datetime_picker:
   carousel_slider:
 
   rxdart:
+
 
 
 
