--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   line_icons:
   animations:
   animated_text_kit:
+  styled_widget:
   #date
   flutter_datetime_picker:
   carousel_slider:
