--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,15 +20,14 @@ dependencies:
   stacked_themes:
 
   #firebase
-  firebase_core_web:
-  firebase_core:
-  firebase_auth:
-  firebase_auth_web:
-  cloud_firestore:
-  cloud_firestore_web:
-  firebase_storage:
-  firebase_storage_web:
-  firestore_helpers:
+  firebase_core_web: ^1.6.1
+  firebase_core: ^1.13.1
+  firebase_auth: ^3.3.11
+  firebase_auth_web: ^3.3.9
+  cloud_firestore: ^3.1.10
+  cloud_firestore_web: ^2.6.10
+  firebase_storage: ^10.2.9
+  firebase_storage_web: ^3.2.10
 
   image_picker:
   google_fonts:
@@ -43,18 +42,16 @@ dependencies:
   styled_widget:
   #date
   flutter_datetime_picker:
+    git:
+      url: https://github.com/Realank/flutter_datetime_picker.git
+      ref: master
   carousel_slider:
   uuid:
   percent_indicator:
   age_calculator:
+  dropdown_search:
 
   rxdart:
-
-
-
-
-
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
